[[release-notes-5.10.1]]
== 5.10.1

*Date of Release:* ❓

*Scope:* ❓

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit5-repo}+/milestone/72?closed=1+[5.10.1] milestone page in the
JUnit repository on GitHub.


[[release-notes-5.10.1-junit-platform]]
=== JUnit Platform

==== Bug Fixes

* ❓

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓


[[release-notes-5.10.1-junit-jupiter]]
=== JUnit Jupiter

==== Bug Fixes

* ❓

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓


[[release-notes-5.10.1-junit-vintage]]
=== JUnit Vintage

==== Bug Fixes

* Fix reporting of JUnit 3 test classes with `@Ignored` annotation

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓